# random_decs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compressors.sublime-project  simple-lzfse.cpp
include/: invalidate_cache.hpp  io.hpp
libs/: invalidate_cache.cpp  io.cpp
src/: simple-brotli.cpp  simple-bzip2.cpp  simple-lz4.cpp  simple-lzfse.cpp  simple-lzham.cpp  simple-lzma.cpp  simple-ppmd-parser.cpp  simple-snappy.cpp  simple-zlib.cpp  simple-zopfli.cpp  simple-zstd.cpp
